Add codemirror to edit article

--- a/bower.json
+++ b/bower.json
@@ -41,6 +41,7 @@
     "ng-ckeditor": "~0.2.1",
     "angular-cookies": "~1.4.5",
     "gToast": "~0.1.2",
-    "angular-loading-bar": "~0.8.0"
+    "angular-loading-bar": "~0.8.0",
+    "angular-ui-codemirror": "~0.3.0"
   }
 }
